# telegram-bot-stuff

./: .gitignore  Cargo.toml  LICENSE  README.md  buildall.sh  deployall.sh
.github/workflows/: rust.yml
Anti_NFT_Spam_Bot/: scam-website-domain-list.txt
anti_nft_spam_bot/: Cargo.toml  known_domain_catalog.ebnf  scam-website-domain-list.kdc  scam-website-domain-list.txt  spam_website_list.txt  sqlite3_expert.py
anti_nft_spam_bot/src/: actions.rs  domain_checker.rs  entry.rs  handlers.rs  lib.rs  main.rs  misc.rs  sanitized_url.rs  types.rs
anti_nft_spam_bot/src/database/: mod.rs  types.rs
anti_nft_spam_bot/src/database/list_watcher/: mod.rs  parser.rs
anti_nft_spam_bot/src/domain_checker/: american_groundhog_spam.rs  mod.rs  nft_spam.rs
anti_nft_spam_bot/src/domains/: checker.rs  database.rs  mod.rs  types.rs
anti_nft_spam_bot/src/domains/database/: mod.rs
anti_nft_spam_bot/src/domains/database/list_watcher/: mod.rs  parser.rs
anti_nft_spam_bot/src/handlers/: mod.rs  reviews.rs
anti_nft_spam_bot/src/spam_checker/: american_groundhog_spam.rs  mod.rs  nft_spam.rs
arch_bot_commons/: Cargo.toml
arch_bot_commons/src/: lib.rs  user_resolving.rs
arch_bot_commons/src/useful_methods/: mod.rs  split_msg.rs
hi_cutie_bot/: Cargo.toml
hi_cutie_bot/src/: main.rs
teco_tools_bot/: Cargo.toml
teco_tools_bot/src/: entry.rs  lib.rs  main.rs
teco_tools_bot/src/handlers/: commands.rs  functions.rs  mod.rs
teco_tools_bot/src/tasks/: completion.rs  mod.rs  param_parsing.rs
teco_tools_bot/src/tasks/completion/: media_processing.rs  mod.rs
teco_tools_bot/src/tasks/completion/media_processing/: mod.rs  video.rs  whisper.rs
teco_tools_bot/src/tasks/parsing/: mod.rs  tokenizer.rs
teco_tools_bot/src/tasks/taskman/: database.rs  mod.rs
