[package]
name = "anti_nft_spam_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_bot_commons = { version = "0.6.5", path = "../arch_bot_commons" }
chrono = "0.4.34"
crc32fast = "1.4.2"
html-escape = "0.2.13"
log = "0.4.17"
# This seems to depend on OpenSSL 3.3.0, but Fedora Server 40 only has 3.2.1.
# Use "vendored" feature to work around that lmao
native-tls = { version = "0.2.12", features = ["vendored"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
reqwest = { version = "0.11.24", features = ["socks"] }
sqlx = { version = "0.8.2", features = [
	"sqlite",
	"chrono",
	"runtime-tokio-rustls",
] }
teloxide = "0.12.0"
tokio = { version = "1.21.2", features = ["full"] }
url = "2.3.1"
