[package]
name = "arch_bot_commons"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide = "0.11.1"
tokio = { version = "1.21.2", features = ["full"] }
