[package]
name = "teco_tools_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_bot_commons = { version = "0.6.5", path = "../arch_bot_commons" }
crossbeam-channel = "0.5.12"
html-escape = "0.2.13"
log = "0.4.17"
magick_rust = "0.21.0"
rayon = "1.10.0"
regex = "1.10.5"
serde = "1.0.197"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
teloxide = "0.12.0"
tempfile = "3.10.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.15"
unicode-segmentation = "1.11.0"
url = "2.5.0"
