[package]
name = "teco_tools_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_bot_commons = { version = "0.6.5", path = "../arch_bot_commons" }
chrono = "0.4.38"
crossbeam-channel = "0.5.12"
html-escape = "0.2.13"
log = "0.4.17"
magick_rust = "2.0.0"
# This seems to depend on OpenSSL 3.3.0, but Fedora Server 40 only has 3.2.1.
# Use "vendored" feature to work around that lmao
native-tls = { version = "0.2.12", features = ["vendored"] }
rand = "0.10.0"
rayon = "1.10.0"
regex = "1.10.5"
reqwest = { version = "0.12.22", features = ["multipart", "socks"] }
serde = "1.0.197"
serde_json = "1.0.116"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
teloxide = "0.17.0"
tempfile = "3.10.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.15"
unicode-segmentation = "1.11.0"
url = "2.5.0"

# BIG boi
ffmpeg-next = { version = "8.1.0", features = ["build", "build-lib-celt", "build-lib-dav1d", "build-lib-fdk-aac", "build-lib-gsm", "build-lib-ilbc", "build-lib-kvazaar", "build-lib-mp3lame", "build-lib-opencore-amrnb", "build-lib-opencore-amrwb", "build-lib-openh264", "build-lib-openjpeg", "build-lib-opus", "build-lib-snappy", "build-lib-speex", "build-lib-theora", "build-lib-twolame", "build-lib-vorbis", "build-lib-vpx", "build-lib-webp", "build-lib-x264", "build-lib-x265", "build-lib-xvid", "build-license-gpl", "build-license-nonfree", "build-license-version3"] }

